examples/invalid/test36.alice


The looking-glass hatta ()
opened
   y was a number.
   y's 1 piece became 1.
closed
